--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,41 @@
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
-  overflow: hidden;
+  display: flex;
+  height: 4em;
+  justify-content: right;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
+  display: flex;
+  color: red;
+  align-items: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-.topnav a:not(:first-child) {
-  display: none;
-}
-
-.topnav a.icon {
-  float: right;
-  display: block;
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-
-.topnav.responsive {
-  position: relative;
-}
-
-.topnav.responsive a.icon {
+.logo {
   position: absolute;
-  right: 0;
-  top: 0;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
-.topnav.responsive a {
-  float: none;
-  display: block;
-  text-align: left;
+.logo img {
+  width: 3em;
 }
+
+
 
 /* END NAVIGATION */
 
 
 
-/* START HOMEPAGE */
+/* START HOMEPAGE ZANI EN WAIL*/
 
 .homePage {
   background-color: rgb(143, 219, 255);
@@ -74,7 +45,7 @@
 
 /* END HOMEPAGE */
 
-/* START SECOND PAGE */
+/* START SECOND PAGE NAWFAL EN ABDELLA */
 
 .secondPage {
   background-color: blue;
@@ -83,7 +54,7 @@
 
 /* END SECOND PAGE */
 
-/* START THIRD PAGE */
+/* START THIRD PAGE WAIL EN Zani */
 .thirdPage {
   background-color: green;
   height: 100vh;
@@ -91,8 +62,8 @@
 
 /* END THIRD PAGE */
 
-/* CONTACT */
-.contactPage {
+/* SCHEMA SETH */
+.schemaPage {
   background-color: rgb(255, 81, 0);
   height: 30vh;
 }
@@ -100,3 +71,6 @@
 @media (min-width: 480) {}
 
 @media (min-width: 768) {}
+
+
+
