--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -26,7 +27,7 @@ body {
 .logo {
   position: absolute;
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 35px;
 }
 
 .logo img {
@@ -40,14 +41,18 @@ body {
 .homePage {
   align-content: center;
   height: 100vh;
-}
-
-.container {
-  margin: 0 auto;
-  width: fit-content;
   height: fit-content;
 }
 
+.container {
+  position: relative;
+  max-width: 1425px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 2em;
+}
+
+/* 
 .container h1 {
   position: absolute;
   margin: 0 auto;
@@ -55,7 +60,7 @@ body {
   font-weight: 700;
   padding: 1em;
   background: rgba(255, 255, 255, 0.425);
-}
+} */
 
 .red-color {
   color: red;
@@ -63,22 +68,24 @@ body {
 
 .background-image {
   position: absolute;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  bottom: 50%;
+  background: rgba(255, 255, 255, 0.5);
   width: 100%;
-  padding: 10px;
+  padding: 20px;
 }
 
 h1 {
+
+  font-size: xx-large;
+  font-weight: 700;
   text-align: center;
-  margin-top: 5px;
-  padding: 0;
+  /* padding: 0; */
 }
 
-.homePage img {
+/* .homePage img {
   width: 100%;
   flex: 1;
-}
+} */
 
 /* END HOMEPAGE */
 
@@ -105,8 +112,6 @@ h1 {
   height: 30vh;
 }
 
-@media (min-width: 480) {
-}
+@media (min-width: 480) {}
 
-@media (min-width: 768) {
-}
+@media (min-width: 768) {}
