--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -8,6 +12,11 @@ body {
   display: flex;
   height: 4em;
   justify-content: right;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  overflow: hidden;
 }
 
 .topnav a {
@@ -17,17 +26,21 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  position: relative;
+  right: 3em;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background: rgba(0, 0, 0, 0.03);
   color: black;
 }
 
 .logo {
   position: absolute;
-  margin-top: 10px;
+  margin-top: -55px;
   margin-left: 35px;
+  z-index: 99;
+  position: fixed;
 }
 
 .logo img {
@@ -39,6 +52,7 @@ body {
 /* START HOMEPAGE ZANI EN WAIL*/
 
 .homePage {
+  margin-top: 4em;
   align-content: center;
   height: 100vh;
   height: fit-content;
@@ -48,7 +62,6 @@ body {
   position: relative;
   max-width: 1425px;
   margin: 0 auto;
-  margin-top: 20px;
   margin-bottom: 2em;
 }
 
@@ -61,8 +74,7 @@ body {
   padding: 1em;
   background: rgba(255, 255, 255, 0.425);
 } */
-
-.red-color {
+.red {
   color: red;
 }
 
@@ -75,7 +87,6 @@ body {
 }
 
 h1 {
-
   font-size: xx-large;
   font-weight: 700;
   text-align: center;
@@ -90,20 +101,111 @@ h1 {
 /* END HOMEPAGE */
 
 /* START SECOND PAGE NAWFAL EN ABDELLA */
-
 .secondPage {
-  background-color: blue;
-  height: 100vh;
+  background-color: white;
+  height: 1080px;
 }
 
+.ipo {
+  margin: 0 2em;
+}
+
+.ipo-text h1 {
+  font-size: 50px;
+  margin-bottom: 1em;
+}
+
+.ipo-red {
+  color: red;
+}
+
+.ipo-text {
+  text-align: center;
+  color: black;
+  margin-bottom: 3em;
+}
+
+.womans img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 45px;
+}
+
+.womans {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.womans div {
+  margin: 1em;
+}
+
+.doel-text h2 {
+  font-size: 25px;
+  border: 5px solid red;
+  border-radius: 25px;
+  width: 218px;
+  margin: 0 auto;
+}
+.doel-text {
+  text-align: center;
+  color: black;
+  margin: 2em auto;
+  
+}
+.doel-list {
+  border: 5px solid red;
+  border-radius: 5px;
+  text-align: left;
+  padding-left: 1em;
+  line-height: 30px;
+  width: fit-content;
+  margin: 2em auto;
+}
+
+.doel-list li {
+  list-style-type:circle;
+}
 /* END SECOND PAGE */
+
+
+
+
 
 /* START THIRD PAGE WAIL EN Zani */
 .thirdPage {
-  background-color: green;
   height: 100vh;
+  height: fit-content;
 }
 
+ .thirdPage h2 {
+  position: absolute;
+  background: rgba(255, 0, 0, 0.904);
+  padding: 10px;
+  margin-right: 2em;
+  font-size: 30pt;
+  font-weight: 700;
+  text-align: left;
+}
+
+.fotoFase1 {
+  width: fit-content;
+  margin: 2em;
+  text-align: center;
+}
+
+.fotoFase1 img {
+  width: 80%;
+}
+
+.fotoFase1 p {
+  position: relative;
+  left: 100px;
+  bottom: 30px;
+  font-weight: 700;
+}
 /* END THIRD PAGE */
 
 /* SCHEMA SETH */
@@ -112,6 +214,404 @@ h1 {
   height: 30vh;
 }
 
-@media (min-width: 480) {}
+@media screen and (min-width: 480px) {
+  /* FASE I */
+  .thirdPage h2 {
+    position: absolute;
+    background: rgba(255, 0, 0, 0.904);
+    padding: 30px;
+    margin-right: 2em;
+    font-size: 50pt;
+    font-weight: 700;
+    text-align: left;
+  }
+}
 
-@media (min-width: 768) {}
+@media screen and (min-width: 700px) {
+  .ipo-text p {
+    margin: 0 auto;
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  /* FASE I */
+  .thirdPage h2 {
+    position: absolute;
+    background: rgba(255, 0, 0, 0.904);
+    padding: 50px;
+    margin-right: 2em;
+    font-size: 60pt;
+    font-weight: 700;
+    text-align: left;
+  }
+
+  .fotoFase1 img {
+    width: 80%;
+  }
+  
+  .fotoFase1 p {
+    position: relative;
+    left: 100px;
+    bottom: 60px;
+    font-size: 1.5em;
+    font-weight: 700;
+  }
+
+}
+
+
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+
+/* SCHEMA SETH */
+.schemaPage {
+  background-color: rgba(0, 0, 0, 0.842);
+  height: 500px;
+  padding-top: 500px;
+  text-align: center;
+}
+
+.schemaPage h1 {
+  position: relative;
+  font-size: 50px;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+  top: -300px;
+  color: white;
+}
+
+.btn {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  padding: 3px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.IPO {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  left: 675px;
+}
+
+.IPO:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.EHB {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  top: 100px;
+  left: 605px;
+}
+
+.EHB:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.VUB {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 100px;
+  left: 537px;
+}
+
+.VUB:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.VPK {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  top: 200px;
+}
+
+.VPK:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.VK {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  top: 200px;
+  left: 100px;
+}
+
+.VK:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.VDK {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  top: 200px;
+  left: 350px;
+}
+
+.VDK:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.BMLT {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  top: 200px;
+  left: 450px;
+}
+
+.BMLT:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.GK {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 200px;
+  right: 930px;
+}
+
+.GK:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.REVAKI {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 200px;
+  right: 860px;
+}
+
+.REVAKI:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.F {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 229px;
+  left: 220px;
+}
+
+.F:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.P {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 229px;
+  left: 310px;
+}
+
+.P:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.SA {
+  border-color: lightcoral;
+  color: red;
+  position: relative;
+  bottom: 229px;
+  left: 400px;
+}
+
+.SA:hover {
+  border-color: lightcoral;
+  color: white;
+  background-color: red;
+}
+
+.IPOtoEHB {
+  background-color: red;
+  position: relative;
+  left: 724px;
+  top: 100px;
+  width: 3px;
+  height: 100px;
+}
+
+.EHBtoLeft1 {
+  background-color: red;
+  position: relative;
+  top: 112px;
+  right: 424px;
+  width: 400px;
+  height: 3px;
+}
+
+.Left1toVPK {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  width: 3px;
+  height: 100px;
+}
+
+.Left1toVK {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  left: 233px;
+  width: 3px;
+  height: 100px;
+}
+
+.EHBtoRight1 {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  left: 175px;
+  width: 600px;
+  height: 3px;
+}
+
+.Right1toBMLT {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  left: 600px;
+  width: 3px;
+  height: 100px;
+}
+
+.Right1toVDK {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  right: 360px;
+  width: 3px;
+  height: 100px;
+}
+
+.IPOtoVUB {
+  background-color: red;
+  position: relative;
+  top: -200px;
+  right: 223px;
+  width: 3px;
+  height: 100px;
+}
+
+.VUBtoLeft2 {
+  background-color: red;
+  position: relative;
+  top: 0px;
+  right: 586px;
+  width: 600px;
+  height: 3px;
+}
+
+.Left2toGK {
+  background-color: red;
+  position: relative;
+  top: -100px;
+  width: 3px;
+  height: 100px;
+}
+
+.Left2toREVAKI {
+  background-color: red;
+  position: relative;
+  left: 310px;
+  top: 0px;
+  width: 3px;
+  height: 100px;
+}
+
+.VUBtoRight2 {
+  background-color: red;
+  position: relative;
+  top: 100px;
+  left: 238px;
+  width: 600px;
+  height: 3px;
+}
+
+.Right2toSA {
+  background-color: red;
+  position: relative;
+  left: 597px;
+  top: -100px;
+  width: 3px;
+  height: 100px;
+}
+
+.Right2toP {
+  background-color: red;
+  position: relative;
+  right: 237px;
+  top: 0px;
+  width: 3px;
+  height: 100px;
+}
+
+.Right2toF {
+  background-color: red;
+  position: relative;
+  right: 205px;
+  top: 0px;
+  width: 3px;
+  height: 100px;
+}
