--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,15 @@ h1 {
 }
 
 .doel-list li {
-  list-style-type:circle;
+  list-style-type: circle;
 }
+
+.woman2 img, .woman3 img {
+  border: 3px dashed red;
+  padding: 15px;
+  background: #f6eaea;
+  background-clip: border-box;
+  }
 /* END SECOND PAGE */
 
 
@@ -213,6 +220,7 @@ h1 {
 	}
 }
 
+
 /* .fases {
   position: sticky;
   top: 0;
@@ -242,8 +250,18 @@ h1 {
 .tweedeParagraaf {
   color: white;
   position: relative;
-  
+  left: 150px;
 }
+
+.derdeParagraaf {
+  color: white;
+}
+
+.derdeFoto {
+  width: 100%;
+}
+
+
 
 /* END THIRD PAGE */
 
@@ -299,6 +317,7 @@ h1 {
     font-size: 1.5em;
     font-weight: 700;
   }
+
   
 /* images WAT IS IPO */
   .womans img {
@@ -348,10 +367,17 @@ h1 {
 
 /* SETH SCHEMA */
 /* Some positioning and ratios */
-.sticky-container {
+.sticky-container-ehb {
   max-width: 270px;
   position: relative;
-  margin-left: 50%;
+  margin-left: 25%;
+  margin-top: 15%;
+}
+
+.sticky-container-vub {
+  max-width: 270px;
+  position: relative;
+  margin-left: 75%;
   margin-top: 15%;
 }
 
@@ -363,7 +389,7 @@ h1 {
   width: 100%;
 }
 
-.sticky {
+.sticky-ehb {
   position: absolute;
   top: 0;
   left: 0;
@@ -371,8 +397,15 @@ h1 {
   bottom: 0;
 }
 
-/* Shadow behind the sticky note */
-.sticky::before {
+.sticky-vub {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.sticky-ehb:before {
   box-shadow: -2px 2px 15px 0 rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.25);
   content: '';
@@ -381,9 +414,25 @@ h1 {
   height: 83%;
   position: absolute;
   top: 30%;
+  transform: rotate(-5deg);
 }
 
-/* The sticky note itself */
+.sticky-vub:before {
+  box-shadow: -2px 2px 15px 0 rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
+  content: '';
+  width: 90%;
+  left: 5px;
+  height: 83%;
+  position: absolute;
+  top: 30%;
+  transform: rotate(5deg);
+}
+
+.sticky-vub:before:hover {
+  transform: rotate(-5deg);
+}
+
 .sticky-content-ehb {
   background: linear-gradient(180deg,
       rgb(255, 187, 187) 0%,
@@ -395,9 +444,14 @@ h1 {
   padding-top: 10%;
   padding-left: 10%;
   font-size: 1.5rem;
-
+  transform: rotate(-5deg);
   clip-path: url(#stickyClip);
 }
+
+/* .sticky-content-ehb:hover {
+  transform: scale(1, 1);
+} */
+
 
 .sticky-content-vub {
   background: linear-gradient(180deg,
@@ -409,6 +463,7 @@ h1 {
   height: 100%;
   padding-top: 10%;
   padding-left: 10%;
+  transform: rotate(5deg);
   font-size: 1.5rem;
 
   clip-path: url(#stickyClip);
@@ -419,7 +474,14 @@ h1 {
   font-size: 0.98rem;
 }
 
-/* Add responsiveness */
+.spin {
+  text-align: center;
+  font-weight: bold;
+  font-size: 50pt;
+  color: red;
+  text-shadow: 6px 6px 0px rgba(0, 0, 0, 0.2)
+}
+
 @media screen and (min-width: 640px) {
   .sticky:before {
     height: 79%;
@@ -453,4 +515,3 @@ h1 {
     font-size: 1.875rem;
   }
 }
-
