--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,140 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+/* background */
+
+html {
+  height:100%;
+}
+
+body {
+  margin:0;
+}
+
+.area{
+  background: #ffffff;  
+  background: -webkit-linear-gradient(to left, #8f94fb, #202ae9);  
+  width: 100%;
+  height:90vh;
+  position: absolute;
+ 
+}
+
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(179, 179, 179, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
+}
+
 .red {
   color: red;
 }
@@ -78,8 +212,11 @@ body {
 /* POSITIONERING ANIMATIE HIER */
 
 video {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 /* END HOME */
 
@@ -296,7 +433,7 @@ hr {
   video {
     width: 100%;
     height: 80%;
-    margin-top: 10em;
+    margin-top: 5em;
   }
 
   .ehb-gif {
@@ -439,6 +576,59 @@ hr {
 }
 
 /* END THIRD PAGE */
+
+/* Partners deel 2 */
+  .partners2 {
+    text-align: center;
+    height: 100vh;
+  }
+  .partners2-grote-container img {
+    width: 200px;
+  }
+
+  .partners2-grote-container {
+    display: flex;
+  }
+
+  .UAB-logo {
+    margin-bottom: 4em;
+  }
+
+  .UAB-logo img {
+    width: 300px;
+  }
+
+  .ehb-list, .vub-list {
+    text-align: start;
+    width: fit-content;
+    position: relative;
+    left: 5em;
+  }
+
+  .vub-list {
+    margin-top: 2em;
+  }
+
+  .wrapper3 {
+    margin: 15em;
+  }
+
+  .partners2 ul {
+    line-height: 2em;
+    list-style-type: disc;
+    list-style-position: inside;
+  }
+
+  .containers {
+    width: 33%;
+  }
+
+  .arrow-foto img {
+    position: relative;
+    top: 8em;
+    vertical-align: middle;
+  }
+/* END Partners 2 */
 
 /* Back to top Button */
 #myBtn {
